package game.character;

public interface IInventory {
    void addItem(String item);
    void removeItem(String item);
    void listItems();
}
